@@ -9,7 +9,7 @@ merge_RLum<- structure(function(#General merge function for RLum S4 class object
   ## version 0.1
   # ===========================================================================
 
-  object, 
+  objects, 
   ### \code{\link{list}} of \code{\linkS4class{RLum}} (\bold{required}): list of S4 object of class \code{RLum}
   
   ...
@@ -20,40 +20,44 @@ merge_RLum<- structure(function(#General merge function for RLum S4 class object
    # Integrity check ----------------------------------------------------------
   
  
-   ##check if object is of class RLum
-   temp.class.test <- unique(sapply(1:length(object), function(x){
+   ##check if objects are of class RLum
+   temp.class.test <- unique(sapply(1:length(objects), function(x){
    
-     if(is(object[[x]], "RLum") ==FALSE){
+     if(is(objects[[x]], "RLum") ==FALSE){
        
        temp.text <- paste("[merge_RLum]: At least element", x, "is not of class 'RLum' or a derivative class!")
        stop(temp.text)
      }
      
      ##provide class of objects ... so far they should be similar
-     is(object[[x]])[1]
+     is(objects[[x]])[1]
      
     }))
      
     ##check if objects are consitent
     if(length(temp.class.test)>1){
       
-      stop("[merge_RLum] So far only similar input objects in the list are supported!")
+      ##This is not valid for RLum.Analysis objects
+      if(!"RLum.Analysis"%in%temp.class.test){
       
+          stop("[merge_RLum] So far only similar input objects in the list are supported!")
+          
+      }
     }
    
  
     ##grep object class
-    object.class <-  temp.class.test
+    objects.class <- ifelse("RLum.Analysis"%in%temp.class.test, "RLum.Analysis", temp.class.test)
     
-    ##select which plot function should be used
+    ##select which merge function should be used
   
-    switch (object.class,
+    switch (objects.class,
             
             RLum.Data.Curve = stop("[merge_RLum] Sorry, merging of 'RLum.Data.Curve' objects currently not supported!"),
             RLum.Data.Image = stop("[merge_RLum] Sorry, merging of 'RLum.Data.Image' objects currently not supported!"),
             RLum.Data.Spectrum = stop("[merge_RLum] Sorry, merging of 'RLum.Data.Spectrum' objects currently not supported!"),
-            RLum.Analysis = stop("[merge_RLum] Sorry, merging of 'RLum.Analysis' objects currently not supported!"),
-            RLum.Results = merge_RLum.Results(object, ...)            
+            RLum.Analysis = merge_RLum.Analysis(objects, ...),
+            RLum.Results = merge_RLum.Results(objects, ...)            
            )
 
 
@@ -62,8 +66,8 @@ merge_RLum<- structure(function(#General merge function for RLum S4 class object
    ##details<<
    ## The function provides a generalised access point for merge specific 
    ## \code{\linkS4class{RLum}} objects.\cr
-   ## Depending on the input object, the corresponding plot function will be selected. 
-   ## Allowed arguments can be found in the documentations of each merg function. 
+   ## Depending on the input object, the corresponding merge function will be selected. 
+   ## Allowed arguments can be found in the documentations of each merge function. 
    ## \tabular{lll}{
    ## \bold{object} \tab \tab \bold{corresponding merge function} \cr
    ##    
@@ -101,7 +105,7 @@ merge_RLum<- structure(function(#General merge function for RLum S4 class object
   temp2 <- calc_CentralDose(ExampleData.DeValues)
   
   ##merge the results and store them in a new object
-  temp.merged <- get_RLum.Results(merge_RLum(object = list(temp1, temp2)))
+  temp.merged <- get_RLum.Results(merge_RLum(objects = list(temp1, temp2)))
   
   
 })#END OF STRUCTURE
